--- a/resources/views/starter-page.html
+++ b/resources/views/starter-page.html
@@ -49,7 +49,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html#hero">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#about">Sobre</a></li>
           <li><a href="index.html#features">Features</a></li>
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#pricing">Pricing</a></li>
